@@ -9,7 +9,11 @@ binmode STDIN, ":utf8";
 binmode STDOUT, ":utf8";
 
 my $n_of_ngram = 3;
-GetOptions ("ngram=s" => \$n_of_ngram);
+my $max_pos = 0;
+GetOptions (
+    "ngram=s" => \$n_of_ngram,
+    "max=s" => \$max_pos,
+    );
 
 my %idx;
 while (<>) {
@@ -17,9 +21,12 @@ while (<>) {
     my ($id, $text) = split(/\t/, $_);
     next unless $text;
     my $ngram_r = mk_ngram(regstr($text), $n_of_ngram);
-    push @{$idx{$_}}, $id for keys %$ngram_r;
+    for my $str (keys %$ngram_r) {
+	next if $max_pos and defined $idx{$str} and $max_pos < @{$idx{$str}};
+	push @{$idx{$str}}, $id;
+    }
 }
-print "$_\t".join(",", @{$idx{$_}})."\n" for sort keys %idx;
+print "$_\t".join(",", @{$idx{$_}})."\n" for grep {!$max_pos or @{$idx{$_}} <= $max_pos} sort keys %idx;
 exit;
 
 # 文字列正規化
